Newly created Tags should bow be written to 1st document - test pending

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
             <a class="nav-link {{fg}}" href="https://brinkhaus.me/">About me</a>
         </div>
         <div>
-            <button type="button" class="btn btn-outline-danger fas" href="#" onclick="javascript:closeApp();">&#xf011;</a>
+            <button type="button" class="btn btn-outline-danger fas me-3" href="#" onclick="javascript:closeApp();">&#xf011;</button>
         </div>
 
         {% if appobj.config['DEBUG'] %}
