Tested splitting func

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -64,7 +64,7 @@
     <div class="col-12 text-start mt-5 mb-4">
         <h3>Batch splitting</h3>
         <p class="text-muted small">Use a separator page between letters when scanning a batch. Download and print the official separator page below. When processing, use the "Split by separator" action (coming to Documents view) to split automatically.</p>
-        <a class="btn btn-outline-primary" href="./templates/split_marker.pdf" download>Download separator page (PDF)</a>
+        <a class="btn btn-outline-primary" href="./static/images/split_marker.pdf" download>Download separator page (PDF)</a>
     </div>
 
 
