--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,8 @@
 
     <!-- FILE LIST -->
     <div class="col-12" id="filepicker">
-        <h4>Please choose a file from input folder</h4>
+        <h4 class="d-inline">Please choose a file from input folder</h4>
+        <button id="reloadFilePicker" type="button" class="btn btn-sm mb-1 ms-2 btn-outline-secondary" title="Reload file list">↻</button>
         {% if appobj.localcfg['sourcepath'] %}
             <div class="mb-3 mt-0"><small class="text-muted">Current input folder: {{ appobj.localcfg['sourcepath'] }}</small></div>
         {% endif %}
@@ -90,7 +91,7 @@
                 {% endif %}
             {% endfor %}
         </div>
-        <br /><br />
+    <br /><br />
     </div>
 </div>
 
@@ -347,6 +348,27 @@
         </div>
     </div>
 </div>
+
+            <!-- PDF Password Modal -->
+            <div class="modal fade" id="pdfPasswordModal" tabindex="-1" aria-labelledby="pdfPasswordLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="pdfPasswordLabel">PDF password required</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Please enter the password for this PDF:</p>
+                            <input id="pdfPasswordInput" type="password" class="form-control" placeholder="Password">
+                            <div id="pdfPasswordError" class="text-danger small mt-2" hidden>Incorrect password, please try again.</div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary" id="pdfPasswordSubmit">Open</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 <!-- EDIT TAG Modal -->
