--- a/templates/index.html
+++ b/templates/index.html
@@ -363,8 +363,43 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <img src='/static/images/preview.jpg' class="img-fluid" />
-            </div>
+                <!-- preview + zone overlay (inserted) -->
+                <div class="mb-3">
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <div>
+                            <h5 class="mt-1">Preview</h5>
+                        </div>
+                        {% if appobj.config['DEBUG'] %}
+                        <div>
+                            <button id="toggleZonesBtn" class="btn btn-sm btn-outline-secondary">Show zones</button>
+                        </div>
+                        {% endif %}
+                    </div>
+
+                    <div id="previewContainer" class="preview-container">
+                        <img id="previewImage" class="preview-image img-fluid" src="{{ appobj.prevfile if appobj.prevfile else '/static/images/preview.jpg' }}" alt="Document preview">
+                        <!-- SVG overlay will be injected here by JavaScript -->
+                    </div>
+                </div>
+
+                {% if appobj.config['DEBUG'] %}
+                <script>
+                (function(){
+                    {% if appobj.zone_results and appobj.zone_results.zones %}
+                    window.zoneResults = { zones: [
+                        {% for z in appobj.zone_results.zones %}
+                        { id: {{ z.id | tojson }}, rect: {{ z.rect | default([]) | tojson }} }{% if not loop.last %},{% endif %}
+                        {% endfor %}
+                    ] };
+                    {% else %}
+                    window.zoneResults = null;
+                    {% endif %}
+                })();
+                </script>
+                {% else %}
+                <script>window.zoneResults = null;</script>
+                {% endif %}
+             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
@@ -372,26 +407,26 @@
     </div>
 </div>
 
-            <!-- PDF Password Modal -->
-            <div class="modal fade" id="pdfPasswordModal" tabindex="-1" aria-labelledby="pdfPasswordLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="pdfPasswordLabel">PDF password required</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Please enter the password for this PDF:</p>
-                            <input id="pdfPasswordInput" type="password" class="form-control" placeholder="Password">
-                            <div id="pdfPasswordError" class="text-danger small mt-2" hidden>Incorrect password, please try again.</div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-primary" id="pdfPasswordSubmit">Open</button>
-                        </div>
-                    </div>
-                </div>
+<!-- PDF Password Modal -->
+<div class="modal fade" id="pdfPasswordModal" tabindex="-1" aria-labelledby="pdfPasswordLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="pdfPasswordLabel">PDF password required</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body">
+                <p>Please enter the password for this PDF:</p>
+                <input id="pdfPasswordInput" type="password" class="form-control" placeholder="Password">
+                <div id="pdfPasswordError" class="text-danger small mt-2" hidden>Incorrect password, please try again.</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="pdfPasswordSubmit">Open</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <!-- EDIT TAG Modal -->
@@ -593,7 +628,6 @@
         </div>
     </div>
 </div>
-
 
 
 {% endblock %}
